--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -2,7 +2,8 @@
 i.e, Higher to lower break points
 In css preference given to which property is more bottom
 */
-@media only screen and (max-width: 416px) {
+
+@media only screen and (max-width:2560px){
 html,body{
 width:100%;
 height:100%;
@@ -12,48 +13,45 @@ position: relative;
 h1.header{
 font-family: var(--bold-text-font);
 color:var(--bold-text-color);
-font-size:1.6rem;
+font-size:7.5rem;
 text-align: center;
 }
 p.desc{
-padding:4px 0;
-text-align: center;
+padding:10px 0;
 color:var(--bold-text-color);
-font-size:12px;
+font-size:29px;
 }
 p.help{
-padding:5px 0;
+padding:10px 0;
 color:#eee;
-text-align: center;
-font-size:12px;
+font-size:29px;
 }
 p.help span{
 color:var(--text-color);
-font-size:12px;
+font-size:29px;
 }
 div.termfolio{
-padding:0 30px;
+padding:3rem 10rem;
 width:100vw;
-line-height: 1.4;
+line-height: 1.6;
 font-family: var(--text-font);  
 display:flex;
 align-items: center;
 flex-direction: column;
 position: absolute;
-bottom: 1rem;
-left:50%;
+bottom: 10rem;
+right:0rem;
 }
 /* Commands Styles*/
 label{
-font-size:13px;
+font-size:29px;
 cursor:pointer;
 color:var(--bold-text-color);
 }
 input#commands{
 all:unset;
+font-size:29px;
 color:var(--text-color);
-width:60px;
-font-size:12px;
 }
 
 ul.list{
@@ -75,18 +73,17 @@ align-self:flex-start;
 background-color: rgba(142, 165, 158, 0);
 width:100%;
 border-radius:20px;
-padding:0 1rem;
-font-size:14px;
+font-size:29px;
+padding:0 32rem;
 }
 div.command-container{
 align-self:flex-start;
-padding:10px 10px;
+padding:10px 32rem;
 }
 div.error{
-padding:10px;
-color:rgb(255, 123, 123);
-display: none;
-font-size:12px;
+    padding:10px;
+    color:rgb(255, 123, 123);
+    display: none;
     text-align: left;
 }
 
@@ -95,7 +92,362 @@ div.empty{
     color:rgb(123, 255, 237);
     display: none;
     text-align: left;
-font-size:12px;
+}
+div.aboutme,.projects,.socials,.blog,.skills,.yt{
+font-family:var(--text-font);
+color:var(--text-color);
+padding-bottom:6px;
+}
+div.socials>p a{
+    color:#fcff65;
+    text-decoration: none;
+}
+div.yt>p a{
+    color:#fcff65;
+    text-decoration: none;
+}
+div.socials>p a:hover
+{
+text-decoration:underline;
+}
+div.yt> p a:hover{
+    text-decoration:underline;
+}
+button#enter{
+all:unset;
+color:var(--bold-text-color);
+display: none;
+}
+}
+@media only screen and (max-width:1440px){
+html,body{
+width:100%;
+height:100%;
+background-color: #1a1b26;
+position: relative;
+}
+h1.header{
+font-family: var(--bold-text-font);
+color:var(--bold-text-color);
+font-size:4.5rem;
+text-align: center;
+}
+p.desc{
+padding:10px 0;
+color:var(--bold-text-color);
+font-size:21px;
+}
+p.help{
+padding:10px 0;
+color:#eee;
+font-size:21px;
+}
+p.help span{
+color:var(--text-color);
+font-size:18px;
+}
+div.termfolio{
+padding:3rem 10rem;
+width:100vw;
+line-height: 1.6;
+font-family: var(--text-font);  
+display:flex;
+align-items: center;
+flex-direction: column;
+position: absolute;
+bottom: 3rem;
+right:0rem;
+}
+/* Commands Styles*/
+label{
+font-size:20px;
+cursor:pointer;
+color:var(--bold-text-color);
+}
+input#commands{
+all:unset;
+font-size:20px;
+color:var(--text-color);
+}
+
+ul.list{
+list-style: none;
+padding:6px;
+}
+ul.list>li:first-child{
+    color:#fff;
+}
+ul.list>li:last-child{
+    color:#fff;
+}
+ul.list li{
+color:var(--text-color);
+}
+div.output{
+text-align: left;
+align-self:flex-start;
+background-color: rgba(142, 165, 158, 0);
+width:100%;
+border-radius:20px;
+padding:0 7rem;
+font-size:20px;
+}
+div.command-container{
+align-self:flex-start;
+padding:10px 6rem;
+}
+div.error{
+    padding:10px;
+    color:rgb(255, 123, 123);
+    display: none;
+    text-align: left;
+}
+
+div.empty{
+    padding:10px;
+    color:rgb(123, 255, 237);
+    display: none;
+    text-align: left;
+}
+div.aboutme,.projects,.socials,.blog,.skills,.yt{
+font-family:var(--text-font);
+color:var(--text-color);
+padding-bottom:6px;
+}
+div.socials>p a{
+    color:#fcff65;
+    text-decoration: none;
+}
+div.yt>p a{
+    color:#fcff65;
+    text-decoration: none;
+}
+div.socials>p a:hover
+{
+text-decoration:underline;
+}
+div.yt> p a:hover{
+    text-decoration:underline;
+}
+button#enter{
+all:unset;
+color:var(--bold-text-color);
+display: none;
+}
+}
+@media only screen and (max-width:1024px){
+
+html,body{
+width:100%;
+height:100%;
+background-color: #1a1b26;
+position: relative;
+}
+h1.header{
+font-family: var(--bold-text-font);
+color:var(--bold-text-color);
+font-size:3.5rem;
+text-align: center;
+}
+p.desc{
+padding:10px 0;
+color:var(--bold-text-color);
+font-size:18px;
+}
+p.help{
+padding:10px 0;
+color:#eee;
+font-size:18px;
+}
+p.help span{
+color:var(--text-color);
+font-size:18px;
+}
+div.termfolio{
+padding:3rem 10rem;
+width:100vw;
+line-height: 1.6;
+font-family: var(--text-font);  
+display:flex;
+align-items: center;
+flex-direction: column;
+position: absolute;
+bottom: 1rem;
+right:0rem;
+}
+/* Commands Styles*/
+label{
+font-size:17px;
+cursor:pointer;
+color:var(--bold-text-color);
+}
+input#commands{
+all:unset;
+color:var(--text-color);
+}
+
+ul.list{
+list-style: none;
+padding:6px;
+}
+ul.list>li:first-child{
+    color:#fff;
+}
+ul.list>li:last-child{
+    color:#fff;
+}
+ul.list li{
+color:var(--text-color);
+}
+div.output{
+text-align: left;
+align-self:flex-start;
+background-color: rgba(142, 165, 158, 0);
+width:100%;
+border-radius:20px;
+padding:0 7rem;
+}
+div.command-container{
+align-self:flex-start;
+padding:10px 0rem;
+}
+div.error{
+    padding:10px;
+    color:rgb(255, 123, 123);
+    display: none;
+    text-align: left;
+}
+
+div.empty{
+    padding:10px;
+    color:rgb(123, 255, 237);
+    display: none;
+    text-align: left;
+}
+div.aboutme,.projects,.socials,.blog,.skills,.yt{
+font-family:var(--text-font);
+color:var(--text-color);
+padding-bottom:6px;
+}
+div.socials>p a{
+    color:#fcff65;
+    text-decoration: none;
+}
+div.yt>p a{
+    color:#fcff65;
+    text-decoration: none;
+}
+div.socials>p a:hover
+{
+text-decoration:underline;
+}
+div.yt> p a:hover{
+    text-decoration:underline;
+}
+button#enter{
+all:unset;
+color:var(--bold-text-color);
+display: none;
+}
+}
+
+
+@media only screen and (max-width: 810px) {
+html,body{
+width:100%;
+height:100%;
+background-color: #1a1b26;
+position: relative;
+}
+h1.header{
+font-family: var(--bold-text-font);
+color:var(--bold-text-color);
+font-size:2.5rem;
+text-align: center;
+}
+p.desc{
+padding:4px 0;
+text-align: center;
+color:var(--bold-text-color);
+font-size:18px;
+}
+p.help{
+padding:5px 0;
+color:#eee;
+text-align: center;
+font-size:18px;
+}
+p.help span{
+color:var(--text-color);
+font-size:18px;
+}
+div.termfolio{
+padding:0 4rem;
+width:100vw;
+line-height: 1.4;
+font-family: var(--text-font);  
+display:flex;
+align-items: center;
+flex-direction: column;
+position: absolute;
+bottom: 10rem;
+left:50%;
+transform: translateX(-50%);
+}
+/* Commands Styles*/
+label{
+font-size:18px;
+cursor:pointer;
+color:var(--bold-text-color);
+}
+input#commands{
+all:unset;
+color:var(--text-color);
+width:270px;
+font-size:19px;
+}
+
+ul.list{
+list-style: none;
+padding:6px;
+}
+ul.list>li:first-child{
+color:#fff;
+}
+ul.list>li:last-child{
+color:#fff;
+}
+ul.list li{
+color:var(--text-color);
+}
+div.output{
+text-align: left;
+align-self:flex-start;
+background-color: rgba(142, 165, 158, 0);
+width:100%;
+border-radius:20px;
+padding:0 1rem;
+font-size:20px;
+}
+div.command-container{
+align-self:flex-start;
+padding:10px 10px;
+position: relative;
+left:1rem;
+}
+div.error{
+padding:10px;
+color:rgb(255, 123, 123);
+display: none;
+font-size:16px;
+text-align: left;
+}
+div.empty{
+padding:10px;
+color:rgb(123, 255, 237);
+display: none;
+text-align: left;
+font-size:16px;
 }
 div.aboutme,.projects,.socials,.blog,.skills,.yt{
 font-family:var(--text-font);
@@ -108,11 +460,243 @@ color:var(--bold-text-color);
 display:inline;
 position: relative;
 left:30px;
-font-size:15px;
-top:1px;
+font-size:17px;
+top:6px;
+}
+i.ri-corner-down-left-line{
+font-size:24px;
 }
 }
 
+
+@media only screen and (max-width: 416px) {
+html,body{
+width:100%;
+height:100%;
+background-color: #1a1b26;
+position: relative;
+}
+h1.header{
+font-family: var(--bold-text-font);
+color:var(--bold-text-color);
+font-size:1.9rem;
+text-align: center;
+}
+p.desc{
+padding:4px 0;
+text-align: center;
+color:var(--bold-text-color);
+font-size:14px;
+}
+p.help{
+padding:5px 0;
+color:#eee;
+text-align: center;
+font-size:14px;
+}
+p.help span{
+color:var(--text-color);
+font-size:14px;
+}
+div.termfolio{
+padding:0 25px;
+width:100vw;
+line-height: 1.4;
+font-family: var(--text-font);  
+display:flex;
+align-items: center;
+flex-direction: column;
+position: absolute;
+bottom: 10rem;
+left:50%;
+transform: translateX(-50%);
+}
+/* Commands Styles*/
+label{
+font-size:15px;
+cursor:pointer;
+color:var(--bold-text-color);
+}
+input#commands{
+all:unset;
+color:var(--text-color);
+width:80px;
+font-size:15px;
+}
+
+ul.list{
+list-style: none;
+padding:6px;
+}
+ul.list>li:first-child{
+color:#fff;
+}
+ul.list>li:last-child{
+color:#fff;
+}
+ul.list li{
+color:var(--text-color);
+}
+div.output{
+text-align: left;
+align-self:flex-start;
+background-color: rgba(142, 165, 158, 0);
+width:100%;
+border-radius:20px;
+padding:0 1rem;
+font-size:16px;
+}
+div.command-container{
+align-self:flex-start;
+padding:10px 10px;
+}
+div.error{
+padding:10px;
+color:rgb(255, 123, 123);
+display: none;
+font-size:16px;
+text-align: left;
+}
+div.empty{
+padding:10px;
+color:rgb(123, 255, 237);
+display: none;
+text-align: left;
+font-size:16px;
+}
+div.aboutme,.projects,.socials,.blog,.skills,.yt{
+font-family:var(--text-font);
+color:var(--text-color);
+padding-bottom:6px;
+}
+button#enter{
+all:unset;
+color:var(--bold-text-color);
+display:inline;
+position: relative;
+left:30px;
+font-size:17px;
+top:3px;
+}
+i.ri-corner-down-left-line{
+font-size:18px;
+}
+}
+@media only screen and (max-width: 390px) {
+html,body{
+width:100%;
+height:100%;
+background-color: #1a1b26;
+position: relative;
+}
+h1.header{
+font-family: var(--bold-text-font);
+color:var(--bold-text-color);
+font-size:1.9rem;
+text-align: center;
+}
+p.desc{
+padding:4px 0;
+text-align: center;
+color:var(--bold-text-color);
+font-size:14px;
+}
+p.help{
+padding:5px 0;
+color:#eee;
+text-align: center;
+font-size:14px;
+}
+p.help span{
+color:var(--text-color);
+font-size:14px;
+}
+div.termfolio{
+padding:0 22px;
+width:100vw;
+line-height: 1.4;
+font-family: var(--text-font);  
+display:flex;
+align-items: center;
+flex-direction: column;
+position: absolute;
+bottom: 10rem;
+left:50%;
+transform: translateX(-50%);
+}
+/* Commands Styles*/
+label{
+font-size:14px;
+cursor:pointer;
+color:var(--bold-text-color);
+}
+input#commands{
+all:unset;
+color:var(--text-color);
+width:60px;
+font-size:14px;
+}
+
+ul.list{
+list-style: none;
+padding:6px;
+}
+ul.list>li:first-child{
+color:#fff;
+}
+ul.list>li:last-child{
+color:#fff;
+}
+ul.list li{
+color:var(--text-color);
+}
+div.output{
+text-align: left;
+align-self:flex-start;
+background-color: rgba(142, 165, 158, 0);
+width:100%;
+border-radius:20px;
+padding:0 1rem;
+font-size:16px;
+}
+div.command-container{
+align-self:flex-start;
+padding:10px 10px;
+}
+div.error{
+padding:10px;
+color:rgb(255, 123, 123);
+display: none;
+font-size:16px;
+text-align: left;
+}
+div.empty{
+padding:10px;
+color:rgb(123, 255, 237);
+display: none;
+text-align: left;
+font-size:16px;
+}
+div.aboutme,.projects,.socials,.blog,.skills,.yt{
+font-family:var(--text-font);
+color:var(--text-color);
+padding-bottom:6px;
+}
+button#enter{
+all:unset;
+color:var(--bold-text-color);
+display:inline;
+position: relative;
+left:30px;
+font-size:17px;
+top:3px;
+}
+i.ri-corner-down-left-line{
+font-size:15px;
+margin-left:5px;
+}
+
+}
 
 @media only screen and (max-width: 376px) {
 html,body{
@@ -152,7 +736,7 @@ display:flex;
 align-items: center;
 flex-direction: column;
 position: absolute;
-bottom: 1rem;
+bottom: 6rem;
 left:50%;
 }
 /* Commands Styles*/
@@ -199,14 +783,126 @@ padding:10px;
 color:rgb(255, 123, 123);
 display: none;
 font-size:12px;
-    text-align: left;
+text-align: left;
 }
 
 div.empty{
-    padding:10px;
-    color:rgb(123, 255, 237);
-    display: none;
-    text-align: left;
+padding:10px;
+color:rgb(123, 255, 237);
+display: none;
+text-align: left;
+font-size:12px;
+}
+div.aboutme,.projects,.socials,.blog,.skills,.yt{
+font-family:var(--text-font);
+color:var(--text-color);
+padding-bottom:6px;
+}
+button#enter{
+all:unset;
+color:var(--bold-text-color);
+display:inline;
+position: relative;
+left:30px;
+font-size:15px;
+top:1px;
+}
+}
+
+@media only screen and (max-width: 321px) {
+html,body{
+width:100%;
+height:100%;
+background-color: #1a1b26;
+position: relative;
+}
+h1.header{
+font-family: var(--bold-text-font);
+color:var(--bold-text-color);
+font-size:1.4rem;
+text-align: center;
+}
+p.desc{
+padding:4px 0;
+text-align: center;
+color:var(--bold-text-color);
+font-size:10px;
+}
+p.help{
+padding:5px 0;
+color:#eee;
+text-align: center;
+
+font-size:10px;
+}
+p.help span{
+color:var(--text-color);
+font-size:10px;
+}
+div.termfolio{
+padding:0 30px;
+width:100vw;
+line-height: 1.4;
+font-family: var(--text-font);  
+display:flex;
+align-items: center;
+flex-direction: column;
+position: absolute;
+bottom: 10rem;
+left:50%;
+}
+/* Commands Styles*/
+label{
+font-size:10px;
+cursor:pointer;
+color:var(--bold-text-color);
+}
+input#commands{
+all:unset;
+color:var(--text-color);
+width:60px;
+font-size:12px;
+}
+
+ul.list{
+list-style: none;
+padding:6px;
+}
+ul.list>li:first-child{
+    color:#fff;
+}
+ul.list>li:last-child{
+    color:#fff;
+}
+ul.list li{
+color:var(--text-color);
+}
+div.output{
+text-align: left;
+align-self:flex-start;
+background-color: rgba(142, 165, 158, 0);
+width:100%;
+border-radius:20px;
+padding:0 1rem;
+font-size:14px;
+}
+div.command-container{
+align-self:flex-start;
+padding:10px 10px;
+}
+div.error{
+padding:10px;
+color:rgb(255, 123, 123);
+display: none;
+font-size:12px;
+text-align: left;
+}
+
+div.empty{
+padding:10px;
+color:rgb(123, 255, 237);
+display: none;
+text-align: left;
 font-size:12px;
 }
 div.aboutme,.projects,.socials,.blog,.skills,.yt{
